# waifuc-dataset-editor

./: .gitignore  README.md  cl_tagger.py  main.py  pyproject.toml  removed_tags.json  run_tagger.py  style.py  tag_cleanr.py
